# DER_IPC_Hair

./: .clang-format  .gitignore  CMakeLists.txt  README.md  path.h.in
cmake/: find_CLI11.cmake  find_IPCtoolkit.cmake  find_eigen3.cmake  find_spdlog.cmake
src/: CMakeLists.txt
src/DER/: CMakeLists.txt  DER.cpp  DER.h  utils.h
src/HairFactory/: CMakeLists.txt  HairFactory.cpp  HairFactory.h
src/ImplicitEuler/: CMakeLists.txt  ImplicitEuler.cpp  ImplicitEuler.h  ImplicitEulerDER.cpp  ImplicitEulerDER.h  ImplicitEulerHairFactory.cpp  ImplicitEulerHairFactory.h
src/LinearSolver/: BaseSolver.h  CMakeLists.txt  EigenSolver.cpp  EigenSolver.h
test/: CMakeLists.txt  path.h.in  test.cpp
test/DER/: CMakeLists.txt
test/DER/BendTwist/: BendTwist.cpp  CMakeLists.txt
test/DER/Curly/: CMakeLists.txt  Curly.cpp
test/DER/CurlyGravity/: CMakeLists.txt  CurlyGravity.cpp
test/DER/Gravity/: CMakeLists.txt  Gravity.cpp
test/HairFactory/: CMakeLists.txt  HairSimulation.cpp
test/HairFactory/PlaneRotate/: CMakeLists.txt  PlaneRotate.cpp
test/HairFactory/SphereHead/: CMakeLists.txt  SphereHead.cpp
